--- a/notebooks/01_complete_climate_system.ipynb
+++ b/notebooks/01_complete_climate_system.ipynb
@@ -5,7 +5,7 @@
    "id": "9b87e09c",
    "metadata": {},
    "source": [
-    "# 🌎 Caribbean Climate Impact Simulation & Early Warning System\n",
+    "# 🌎 Climate Futures Simulation & Early Warning System\n",
     "\n",
     "**A comprehensive machine learning system for predicting climate risks in the Caribbean**\n",
     "\n",
@@ -21,7 +21,7 @@
     "\n",
     "## System Overview\n",
     "\n",
-    "The Caribbean Climate Impact System analyzes multiple climate variables to provide early warnings for:\n",
+    "The Climate Futures System analyzes multiple climate variables to provide early warnings for:\n",
     "1. **Extreme heat events** that threaten public health\n",
     "2. **Heavy rainfall** that may cause flooding\n",
     "3. **Flood susceptibility** based on terrain and rainfall\n",
@@ -121,7 +121,7 @@
     "alert_system = ClimateAlertSystem(config, logger)\n",
     "flood_simulator = FloodSimulator(config, logger)\n",
     "\n",
-    "print(\"✅ Caribbean Climate Impact System initialized\")\n",
+    "print(\"✅ Climate Futures System initialized\")\n",
     "print(f\"📍 Location: {config['location']['default_island']}\")\n",
     "print(f\"🌐 Coordinates: {config['location']['latitude']:.4f}°N, {config['location']['longitude']:.4f}°W\")\n"
    ]
