--- a/notebooks/01_complete_climate_system.ipynb
+++ b/notebooks/01_complete_climate_system.ipynb
@@ -10,9 +10,9 @@
     "**A comprehensive machine learning system for predicting climate risks in the Caribbean**\n",
     "\n",
     "This notebook demonstrates the complete pipeline:\n",
-    "- 🌡️ **Heatwave prediction** using classification models\n",
-    "- 🌧️ **Rainfall forecasting** with regression models\n",
-    "- 🌊 **Flood risk assessment** using hydrological simulation\n",
+    "-  **Heatwave prediction** using classification models\n",
+    "-  **Rainfall forecasting** with regression models\n",
+    "-  **Flood risk assessment** using hydrological simulation\n",
     "- 📊 **Climate risk index** combining all hazards\n",
     "- 🎨 **Interactive visualizations** and dashboards\n",
     "- ⚠️ **Automated alert generation**\n",
